[tool.poetry]
name = "2wenty-9ine"
version = "0.1.0"
description = "The best card game in the world!"
authors = ["Ankit Mathur <val.mathur@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.2"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
